--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>🍳 Liliya's Personal Site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Liliya's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://lh3.googleusercontent.com/a-/AOh14Ghsxb6GTeYrsbL5FAzI0yIVs-2SaamypCrwGapO=s96-c-rg-br100" alt="" width="400"></td>
+      <td><img src="https://lh3.googleusercontent.com/a-/AOh14Ghsxb6GTeYrsbL5FAzI0yIVs-2SaamypCrwGapO=s96-c-rg-br100" alt="" width="200"></td>
       <td>
         <h1>Liliya Khudich</h1>
         <p><em>Developer, <strong><a href="https://www.python.org/">Python</a></strong></em></p>
@@ -17,7 +20,7 @@
       </td>
     </tr>
   </table>
-  <hr size="3" noshade>
+  <hr>
   <h3>It Education</h3>
   <ul>
     <li>Python course</li>
